Hide overflow until we fix the board size

--- a/packages/flatsql-editor/src/schema_graph/schema_graph.module.css
+++ b/packages/flatsql-editor/src/schema_graph/schema_graph.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow: hidden; /* XXX use react scrollbar */
 }
 
 .graph_nodes {
